# My-first-Software-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: main.cpp  ppm.cpp  test_triangle.cpp
src/draw/: Bresenhams_Line.cpp  Bresenhams_Line.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Triangle.cpp  Triangle.h
src/geometry/: Bresenhams_Line.cpp  Bresenhams_Line.h  Face.h  Mesh.h  SceneObject.cpp  SceneObject.h  Triangle.cpp  Triangle.h
src/math/: Float2.cpp  Float2.h  Float3.cpp  Float3.h  Float4.cpp  Matrix4.cpp  Matrix4.h  Transform.cpp  Transform.h
src/math/matrix/: Matrix4.cpp  Matrix4.h
src/math/vector/: Float2.cpp  Float2.h  Float3.cpp  Float3.h  Float4.cpp  Float4.h
src/render/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/structs/: Vertex.h
